Added initial todo table and styled it

--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Challenge</title>
     <link rel="stylesheet" href="style.css">
     <title>Todo App</title>
 
 </head>
 
 <body>
-    <h1>Todo App</h1>
-    <table></table>
-
+    <table class="todo_table" id="todo_table">
+        <tr>
+            <th>Id</th>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Point</th>
+            <th>IsDone</th>
+            <th>CreatedAt</th>
+        </tr>
+    </table>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
