--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 
+
 <body class="container">
     <table class="todo_table" id="todo_table">
         <tr>
@@ -21,32 +22,33 @@
     </table>
 
     <div class="inputs">
-        <p><textarea id="add_title" placeholder="Title"></textarea>
-            <textarea id="add_description" placeholder="Description"></textarea>
-            <label for="Points">Points</label>
-            <select name="Points" id="add_points">
+        <h2>Edit Todo List</h2>
+        <p class="add"><textarea id="add_title" class="title" placeholder="Title"></textarea>
+            <textarea id="add_description" class="description" placeholder="Description"></textarea>
+            <p> <label for="Points" class="pts">Points</label>
+                <select name="Points" id="add_points">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="5">5</option>
-            </select>
+            </select></p>
             <button id="add_btn">Add todo</button></p>
         <input type="text" id="update_id" class="update_id" placeholder="Id">
-        <p>
-            <textarea id="update_title" placeholder="Title"></textarea>
-            <textarea id="update_description" placeholder="Description"></textarea>
-            <label for="Points">Points</label>
-            <select name="Points" id="update_points">
+        <p class="update">
+            <textarea id="update_title" class="title" placeholder="Title"></textarea>
+            <textarea id="update_description" class="description" placeholder="Description"></textarea>
+            <p><label for="Points" class="pts">Points</label>
+                <select name="Points" id="update_points">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
                 <option value="5">5</option>
-            </select>
+            </select></p>
             <button id="update_btn">Update todo</button></p>
 
-        <p><input type="text" id="remove_id" placeholder="Id">
+        <p class="delete"><input type="text" id="remove_id" placeholder="Id">
             <button id="remove_btn">Remove todo</button></p>
     </div>
 
