Implemented the search functionality

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             </select></p>
             <button id="update_btn">Update todo</button></p>
 
-        <p class="delete"><input type="text" id="remove_id" placeholder="Id">
+        <p class="delete"><input type="text" id="remove_id" class="remove_id" placeholder="Id">
             <button id="remove_btn">Remove todo</button></p>
+        <p><input type="text" class="search" id="search" placeholder="live search"></input>
+        </p>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
