--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     </table>
 
     <div class="inputs">
-        <h2>Edit Todo List</h2>
         <p class="add"><textarea id="add_title" class="title" placeholder="Title"></textarea>
             <textarea id="add_description" class="description" placeholder="Description"></textarea>
             <p> <label for="Points" class="pts">Points</label>
@@ -33,7 +32,7 @@
                 <option value="4">4</option>
                 <option value="5">5</option>
             </select></p>
-            <button id="add_btn">Add todo</button></p>
+            <button class="add_btn" id="add_btn">Add todo</button></p>
         <input type="text" id="update_id" class="update_id" placeholder="Id">
         <p class="update">
             <textarea id="update_title" class="title" placeholder="Title"></textarea>
@@ -46,12 +45,14 @@
                 <option value="4">4</option>
                 <option value="5">5</option>
             </select></p>
-            <button id="update_btn">Update todo</button></p>
+            <button class="update_btn" id="update_btn">Update todo</button></p>
 
         <p class="delete"><input type="text" id="remove_id" class="remove_id" placeholder="Id">
             <button id="remove_btn">Remove todo</button></p>
         <p><input type="text" class="search" id="search" placeholder="live search"></input>
         </p>
+        <p><input type="text" id="done" class="done_id" placeholder="Id">
+            <button id="done_btn">Done</button></p>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
